# texed

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: citation.rs  cli.rs  commands.rs  converter.rs  error.rs  include_system.rs  lexer.rs  lexer_extended.rs  macro_processor.rs  main.rs  parser.rs  state.rs
tests/: integration_test.rs
